--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,35 @@
 .imageholder {
-    height: 100vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 20px;
+  height: 100vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
 
-    background-image: url(./subject/assets/img6.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  .img {
-    width: 200px;
-    height: 200px;
-  }
-  .img img {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
+  background-image: url(./subject/assets/img6.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.img {
+  width: 200px;
+  height: 200px;
+}
+.img img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.container {
+  border: 5px solid lightgreen;
+  padding: 20px;
+}
+
+.maindice {
+  display: flex;
+  text-align: center;
+  gap: 20px;
+  font-size: 16px;
+}
+.diceimg img {
+  height: 100px;
+  width: 100px;
+}
